--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-paginate": "8.1.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "8.2.0",
     "sass": "1.49.10",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
   }
 }
