--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
     "lodash": "4.17.21",
-    "papaparse": "5.3.2",
+    "papaparse": "^5.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.2",
     "react-csv": "2.2.2",
